rules fixing div alignment

--- a/styles/rules.css
+++ b/styles/rules.css
@@ -17,6 +17,8 @@
     padding: 25px;
     border: 1px solid #f1f1f1;
     transition: 0.6s;
+    display: grid;
+    justify-content: center;
 }
 
 .objetivo:hover{
@@ -25,6 +27,7 @@
 
 .objetivo h2{
     margin-bottom: 15px;
+    text-align: center;
 }
 
 .participation{
@@ -52,7 +55,10 @@
 }
 
 .points-acumulate{
-    margin: 25px 25px 0 0;
+    margin: 25px 0 0 0;
+    width: 700px;
+    display: grid;
+    justify-content: center;
 }
 
 .points-acumulate h2{
